--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/benjacoblee/tiny#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.1",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
+    "gravatar": "^1.8.0",
     "mongoose": "^5.9.9"
   }
 }
