--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "## Like Medium But Smaller Basically a blog.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon server",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,7 @@
   "homepage": "https://github.com/benjacoblee/tiny#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "concurrently": "^5.1.0",
     "config": "^3.3.1",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
