add console log to diagnose problems

--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "## Like Medium But Smaller Basically a blog.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
     "server": "nodemon server",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+  },
+  "engines": {
+    "node": "13.8.0"
   },
   "repository": {
     "type": "git",
