--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-validator": "^6.4.0",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.9"
+    "mongoose": "^5.9.9",
+    "react-scripts": "4.0.3"
   }
 }
